# haxball-replay-decoder

./: Cargo.toml
.github/workflows/: cd.yml  ci.yml
src/: error.rs  lib.rs  options.rs
src/codec/: events.rs  mod.rs  primitives.rs  reader.rs  replay.rs  room.rs  stadium.rs
src/types/: enums.rs  events.rs  mod.rs  replay.rs  room.rs  stadium.rs
src/validate/: mod.rs  rules.rs
tests/: corruption.rs  fixture_decode.rs
tests/fixtures/: headless-avatar-emoji.hbr2
