[package]
name = "haxball-replay-decoder"
version = "0.1.0"
edition = "2024"
description = "Decoder for HaxBall replay files"
license = "MIT"
repository = "https://github.com/haxbrasil/haxball-replay-decoder"
authors = ["gabhaxball <gabhaxball@gmail.com>"]

[dependencies]
flate2 = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.6"
